Card masonry z-index fixes

--- a/scss/_badge.scss
+++ b/scss/_badge.scss
@@ -51,8 +51,8 @@
 }
 
 .badge-tag {
-  font-size: 85%;
-  padding: $badge-padding-y $badge-padding-y;
+  font-size: 90%;
+  padding: $badge-padding-y $badge-padding-x;
 }
 
 // Colors
